--- a/frontend/languages/html/intro/video/iframe/iframe.html
+++ b/frontend/languages/html/intro/video/iframe/iframe.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <iframe src="https://fmoviesto.site/home/" frameborder="0" width="100%" height="700px"></iframe>
-    <a href="../../../../../../index2.html"><h3>Go back to main</h3></a>
+    <a href="../../../../../../index.html"><h3>Go back to main</h3></a>
 </body>
 </html>
